got the links working for my projects + officially connected to the Github API

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
-re": {
-    "alex-cory/github-api": "*"
-},
+{
+    "require": {
+        "knplabs/github-api": "*"
+    },
     "minimum-stability": "dev"
 }
