updating so alexcory.com/resume will not reroute to alexcory.com/alexcory/resume/

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On
 
-RewriteRule ^(alexcory/[a-z]+)$ /$1/ [R=301]
+RewriteRule ^(alexcory/resume\s[a-z]+)$ /resume/ [R=301]
+RewriteRule ^(alexcory/resume\s[a-z]+)$ /$1/ [R=301]
