--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine On
 
-RewriteRule ^(alexcory/resume/$ /resume/ [R=301]
+# RewriteRule ^(alexcory/resume/$ /resume/ [R=301]
+RewriteRule ^resume/index.php$ /alexcory/resume/ [R=301]
 # RewriteRule ^(alexcory/resume\s[a-z]+)$ /resume/ [R=301]
